add_executable(cbnpic example.cpp ${INPUT_DECK})
if(ENABLE_GPU)
  target_link_libraries(cbnpic PUBLIC CabanaPIC dl cufft)
else()
  target_link_libraries(cbnpic PUBLIC CabanaPIC dl fftw3f)
endif()
target_include_directories( cbnpic PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
install(TARGETS cbnpic DESTINATION ${CMAKE_INSTALL_BINDIR})
